--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "postinstall": "npm run webpack",
     "webpack": "webpack",
     "build": "npm run webpack -- --watch --mode=development",
-    "start:dev": "npm run build & nodemon server/server.js --ignore dist --ignore src",
-    "start": "node server/server.js"
+    "start": "npm run build & nodemon server/server.js --ignore dist --ignore src"
   },
   "author": "",
   "license": "ISC",
